[gd_scene load_steps=8 format=3 uid="uid://bxwq8uupxx5gm"]

[ext_resource type="Script" uid="uid://d27eaxnq8enwh" path="res://Scene/main_menu.gd" id="1_kqsxi"]
[ext_resource type="FontFile" uid="uid://cc6374x5pbssc" path="res://Asset/menu/Ithaca.ttf" id="2_hii65"]
[ext_resource type="Texture2D" uid="uid://brr5665udijhs" path="res://Asset/menu/Screenshot 2025-07-05 190755.png" id="2_pvidh"]
[ext_resource type="Texture2D" uid="uid://n5kxpsgpl57k" path="res://Asset/menu/menu karakter(revisi).png" id="5_hptlk"]
[ext_resource type="Texture2D" uid="uid://5bq24mda0mha" path="res://Asset/menu/text (no line).png" id="5_pvidh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hii65"]
border_color = Color(0.876389, 0.77297, 0.762829, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_87ipw"]
bg_color = Color(0.151276, 0.151276, 0.151276, 1)
shadow_color = Color(0.114897, 0.114897, 0.114897, 0.6)
shadow_size = 1
shadow_offset = Vector2(0, 0.875)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kqsxi")

[node name="Screenshot2025-07-05190755" type="Sprite2D" parent="."]
modulate = Color(0.581033, 0.581033, 0.581033, 1)
position = Vector2(288, 160)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_pvidh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -42.0
offset_right = -53.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.133196, 0.133196, 0.133196, 1)
theme_override_fonts/font = ExtResource("2_hii65")
theme_override_font_sizes/font_size = 29
theme_override_styles/pressed = SubResource("StyleBoxFlat_hii65")
theme_override_styles/normal = SubResource("StyleBoxFlat_87ipw")
text = "Start"
flat = true
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="credit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hii65")
theme_override_font_sizes/font_size = 29
theme_override_styles/normal = SubResource("StyleBoxFlat_87ipw")
text = "Credits"
flat = true
alignment = 0

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hii65")
theme_override_font_sizes/font_size = 29
theme_override_styles/normal = SubResource("StyleBoxFlat_87ipw")
text = "Exit"
flat = true
alignment = 0

[node name="MenuKarakter(revisi)" type="Sprite2D" parent="."]
position = Vector2(400, 192)
scale = Vector2(-0.4, 0.4)
texture = ExtResource("5_hptlk")

[node name="judul" type="Sprite2D" parent="."]
position = Vector2(149, 49.935)
scale = Vector2(0.464844, 0.464844)
texture = ExtResource("5_pvidh")

[connection signal="pressed" from="VBoxContainer/start" to="." method="on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
